frame/support/test/tests/pallet_ui/compare_unset_storage_version.rs
#[frame_support::pallet]
mod pallet {
	use frame_support::pallet_prelude::*;
	use frame_system::pallet_prelude::*;

	#[pallet::config]
	pub trait Config: frame_system::Config {}

	#[pallet::pallet]
	pub struct Pallet<T>(core::marker::PhantomData<T>);

	#[pallet::hooks]
	impl<T: Config> Hooks<BlockNumberFor<T>> for Pallet<T> {
		fn on_runtime_upgrade() -> Weight {
			if Self::current_storage_version() != Self::on_chain_storage_version() {

			}

			Default::default()
		}
	}

	#[pallet::call]
	impl<T: Config> Pallet<T> {}
}

fn main() {}
